添加了register的popup，删除了一些以前版本遗留的无用文件

--- a/dev/index.html
+++ b/dev/index.html
@@ -13,6 +13,7 @@
     <app></app>
     <class-popup></class-popup>
     <note-popup></note-popup>
+    <register-popup></register-popup>
     <note-operations></note-operations>
 </div>
 
