--- a/dev/index.html
+++ b/dev/index.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
+
+    <link rel="stylesheet" href="lib/weui.min.css">
+    <link rel="stylesheet" href="lib/jquery-weui.min.css">
+    <link rel="stylesheet" href="lib/font_1469889758_9089751.css">
+
     <title>YOYO</title>
 
 </head>
@@ -17,22 +22,19 @@
     <note-operations></note-operations>
 </div>
 
-<script src="//cdn.bootcss.com/jquery/1.11.0/jquery.min.js"></script>
+<script src="lib/jquery.min.js"></script>
 
 <script src="//luoc.co/sdks/navbar/index.js"></script>
 <script src="//luoc.co/sdks/yoyo/index.js"></script>
 
-<link rel="stylesheet" href="//cdn.bootcss.com/weui/1.1.1/style/weui.min.css">
-<link rel="stylesheet" href="//cdn.bootcss.com/jquery-weui/1.0.1/css/jquery-weui.min.css">
-
-<script src="//cdn.bootcss.com/jquery-weui/1.0.1/js/jquery-weui.min.js"></script>
+<script src="lib/jquery-weui.min.js"></script>
 
 <!-- 如果使用了某些拓展插件还需要额外的JS -->
-<script src="//cdn.bootcss.com/jquery-weui/1.0.1/js/swiper.min.js"></script>
-<script src="//cdn.bootcss.com/jquery-weui/1.0.1/js/city-picker.min.js"></script>
+<!--<script src="//cdn.bootcss.com/jquery-weui/1.0.1/js/swiper.min.js"></script>-->
+<!--<script src="//cdn.bootcss.com/jquery-weui/1.0.1/js/city-picker.min.js"></script>-->
 
 <!-- fastclick v1.0.6 -->
-<script src="https://cdn.bootcss.com/fastclick/1.0.6/fastclick.min.js"></script>
+<script src="lib/fastclick.min.js"></script>
 <script>
     $(function()
     {
@@ -40,7 +42,8 @@
     })
 </script>
 
-<script src="//cdn.bootcss.com/vue/2.1.8/vue.js"></script>
+<script src="lib/vue.js"></script>
+<script src="lib/vuex.js"></script>
 <script src="index.js"></script>
 
 </body>
